--- a/clif.html
+++ b/clif.html
@@ -53,11 +53,10 @@
 
     <nav class="main-nav">
       <ul class="main-nav-list">
-        <li><a class="main-nav-link" href="#tint-number">درجات العازل</a></li>
-        <li><a class="main-nav-link" href="#services"> انواع العوازل</a></li>
+        <li><a class="main-nav-link" href="#specifications"> الخصائص</a></li>
+        <li><a class="main-nav-link" href="#pricing"> الباقات</a></li>
         <li><a class="main-nav-link" href="#gallery"> معرض الصور</a></li>
         <li><a class="main-nav-link" href="#testimonials"> اراءالعملاء</a></li>
-        <li><a class="main-nav-link" href="#faq"> الاسئلةالشائعة</a></li>
         <li><a class="main-nav-link" href="./terms.html"> البنود والشروط</a></li>
         <li><a class="main-nav-link" href="./contactus.html"> تواصل معنا</a></li>
       </ul>
@@ -74,187 +73,144 @@
   <main>
     <section class="section-hero" id="section-hero">
       <div class="protication">
-        <img src="./img/tint/tint-land2.webp" alt="tint">
+        <img src="./img/clif/clif-landing.jpg" alt="protication">
         <div class="container">
           <div class="protication-text">
-            <h1>مع عازل حراي من هافركامب خليك مميز
-            </h1>
+            <h1>كلايف ديزاين اقوي حماية كورية بالكويت مع سماكة تصل الي 9.5 ميكرميلي </h1>
           </div>
         </div>
       </div>
-      <!-- end hero -->
     </section>
     <!-- end hero -->
-    <section>
-      <!-- start slider -->
-      <div class="slider">
-        <div class="container">
-          <div class="slider-text">
-            <h2>تمتع بخصوصية وراحة بال مع افلام التضليل من هافركامب</h2>
-            <p>حقم تظليل سيارتك باستخدام أفلام هافركامب لنوافذ السيارات فهي تحمي من الحرارة وتوفر حماية تصل إلى 99% من
-              الأشعة فوق
-              البنفسجية خاصة في أشهر الصيف <br> حيث ترتفع درجة حرارة السيارات بشكل كبير تحت أشعة الشمس مما يؤدي إلى
-              ارتفاع
-              شديد لدرجات
-              الحرارة بالإضافة إلى الخصوصية</p>
+    <!-- start specifications -->
+    <div class="specifications" id="specifications">
+      <div class="center-text">
+        <h2 class="heading-secondary">خصائص الحماية</h2>
+      </div>
+      <div class="container">
+        <div class="box">
+          <div class="img"><img src="./img/haverkamp/ppf-heat.png" alt=""></div>
+          <div class="box-text">
+            <h3>المعالجة الذاتية</h3>
+            <p>
+              المعالجة الذاتية تعمل على اعادة طبقة الحماية الى حالتها الاصلية
+              عند تعرضها لحرارة مثل الشمس او مجفف الشعر
+            </p>
           </div>
-          <div class="juxtapose">
-            <img src="./img/tint/hot.jpg" data-label="قبل تركيب العازل" alt="hot" />
-            <img src="./img/tint/could.jpg" data-label="بعد تركيب العازل" alt="could" />
+        </div>
+        <div class="box">
+          <div class="img"><img src="./img/haverkamp/ppf-shi.png" alt=""></div>
+          <div class="box-text">
+            <h3>لمعة اضافية</h3>
+            <p>
+              احصل على لعمة اضافية تصل الى 70% اضافية على لعمة السيارة بعد
+              التركيب
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img"><img src="./img/haverkamp/ppf-nano.png" alt=""></div>
+          <div class="box-text">
+            <h3>تقنية النانو سيراميك</h3>
+            <p>
+              مدمجة مع الحماية حيث تعمل على اضافة حماية اضافية لطبقة الحماية
+              تعمل على مقاومة الاصفرار
+            </p>
           </div>
         </div>
       </div>
-      <!-- end slider -->
-    </section>
-
+    </div>
+    <!-- end specifications -->
     <!-- start tint number -->
     <div class="tint-number" id="tint-number">
       <div class="center-text">
         <h2 class="heading-secondary">
-          تعرف علي نسبة العازل المتوفرة لدينا </h2>
+          تعرف على باقات الحماية المتوفرة لدين</h2>
       </div>
       <div class="tint-number-container">
         <div class="container">
           <div class="flip">
-            <div class="front" style="background-image: url(./img/tint/tint-0.webp)"></div>
+            <div class="front" style="background-image: url(./img/haverkamp/ppf-silver.png)"></div>
             <div class="back">
-              <h2>شفاف</h2>
-              <!-- <p>نسبة الرويا 100%</p> -->
+              <h2>الباقة الفضية</h2>
             </div>
           </div>
           <div class="flip">
-            <div class="front" style="background-image: url(./img/tint/tint-10.webp)"></div>
+            <div class="front" style="background-image: url(./img/haverkamp/ppf-goald.png)"></div>
             <div class="back">
-              <h2>10%</h2>
-              <!-- <p>
-                    </p> -->
+              <h2>الباقة الذهبية</h2>
             </div>
           </div>
           <div class="flip">
-            <div class="front" style="background-image: url(./img/tint/tint-30.webp)"></div>
+            <div class="front" style="background-image: url(./img/haverkamp/ppf-platinum.png)"></div>
             <div class="back">
-              <h2>30%</h2>
-              <!-- <p>
-                    
-                    </p> -->
-            </div>
-          </div>
-          <div class="flip">
-            <div class="front" style="background-image: url(./img/tint/tint-30.webp)"></div>
-            <div class="back">
-              <h2>50%</h2>
-              <!-- <p>
-                    
-                    </p> -->
+              <h2>الباقة البلاتينية</h2>
             </div>
           </div>
         </div>
       </div>
     </div>
     <!-- end tint number -->
-    <!-- start ppf-type section -->
-    <section class="ppf-type" id="ppf-type">
+    <!-- Start Pricing -->
+    <div class="pricing" id="pricing">
+      <div class="dots dots-up"></div>
+      <div class="dots dots-down"></div>
       <div class="center-text">
         <h2 class="heading-secondary">
-          تعرف علي انواع العوازل المتوفرة لدينا </h2>
+          الاسعار</h2>
       </div>
       <div class="container">
-        <div class="box">
-          <img src="./img/tint/haverkamp.png" alt="haverkamp" />
-          <div class="content">
-            <h3>هافركامب</h3>
-            <p>عازل الماني</p>
+        <div class="box popular">
+          <div class="label">الاكثر مبيعا</div>
+          <div class="title">بلاتينية</div>
+          <div class="price">
+            <span class="amount">500 K.D</span>
+            <span class="time">السعر متغير حسب نوع السيارة</span>
           </div>
-          <!-- <div class="info">
-            <a href="./haverppf.html">اعرف المزيد</a>
-            <i class="fas fa-long-arrow-alt-left"></i>
-          </div> -->
+          <ul>
+            <li>حماية بدى كامل</li>
+            <li>عازل حراري شامل جميع زجاج السيارة</li>
+            <li>حماية الجام الامامي</li>
+            <li>عمل نانو للمقاعد</li>
+            <li>عمل نانو للرنجات</li>
+            <li>تلبيس دواسات</li>
+            <li>تعقيم عدد 2 سيارة</li>
+            <li>خدمة الونش متوفرة لمرة واحدة</li>
+          </ul>
         </div>
         <div class="box">
-          <img src="./img/tint/SUNTEK.jpg" alt="clif" />
-          <div class="content">
-            <h3>صن تك</h3>
-            <p>عازل امريكي</p>
+          <div class="title">ذهبية</div>
+          <div class="price">
+            <span class="amount">250 K.D</span>
+            <span class="time">السعر متغير حسب نوع السيارة</span>
           </div>
-          <!-- <div class="info">
-            <a href="#">اعرف المزيد</a>
-            <i class="fas fa-long-arrow-alt-left"></i>
-          </div>-->
+          <ul>
+            <li>حماية كبوت كامل</li>
+            <li>عازل حراري شامل جميع زجاج السيارة</li>
+            <li>حماية الجام الامامي</li>
+            <li>عمل نانو للمقاعد</li>
+            <li>عمل نانو للرنجات</li>
+            <li>تعقيم عدد 2 سيارة</li>
+          </ul>
         </div>
         <div class="box">
-          <img src="./img/tint/aswf.jpeg" alt="HEXIS" />
-          <div class="content">
-            <h3>اية اس دابليو اف </h3>
-            <p>عازل امريكي</p>
+          <div class="title">فضية</div>
+          <div class="price">
+            <span class="amount">175 K.D</span>
+            <span class="time">السعر متغير حسب نوع السيارة</span>
           </div>
-          <!-- <div class="info">
-            <a href="#">اعرف المزيد</a>
-            <i class="fas fa-long-arrow-alt-left"></i>
-          </div> -->
-        </div>
-        <div class="box">
-          <img src="./img/tint/royal-shield.png" alt="iron shield" />
-          <div class="content">
-            <h3> رويال شيلد</h3>
-            <p>عازل امريكي</p>
-          </div>
-          <!-- <div class="info">
-            <a href="#">اعرف المزيد</a>
-            <i class="fas fa-long-arrow-alt-left"></i>
-          </div> -->
-        </div>
-      </div>
-    </section>
-    <!-- end ppf-type section -->
-    <!-- start specifications -->
-    <div class="specifications" id="specifications">
-      <div class="center-text">
-        <h2 class="heading-secondary">
-          خصائص العازل</h2>
-      </div>
-      <div class="container">
-        <div class="box">
-          <div class="img"><img src="./img/tint/wahag.webp" alt=""></div>
-          <div class="box-text">
-            <h3>تقليل اكتساب الحرارة صيفًا</h3>
-            <p>
-              يمنع دخول جزء كبير من الأشعة تحت الحمراء (IR) القادمة من الشمس، والتي تُسبب ارتفاع الحرارة داخل المكان.
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img"><img src="./img/tint/air.avif" alt=""></div>
-          <div class="box-text">
-            <h3>تقليل استهلاك الطاقة</h3>
-            <p>
-              تقليل استهلاك الطاقة من خلال العزل الحراري يتم عبر الحد من انتقال الحرارة بين الداخل والخارج، مما يؤدي إلى
-              تقليل الحاجة
-              لتشغيل أجهزة التكييف
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img"><img src="./img/tint/car-interior.jpg" alt=""></div>
-          <div class="box-text">
-            <h3>حجب الأشعة فوق البنفسجية</h3>
-            <p>
-              يمنع دخول الأشعة فوق البنفسجية بنسبة تفوق 99%.<br>
-              يعمل علي تخفيف حدة الإضاءة الشمسية المباشرة دون التأثير الكبير على الإضاءة الطبيعية.
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img last"><img src="./img/tint/privacy.webp" alt=""></div>
-          <div class="box-text">
-            <h3>خصوصية وراحة بال</h3>
-            <p>
-              يعمل علي حجب الرؤية من الخارج الي الداخل تساعد الراكب علي الحصول علي خصوصيتة </p>
-          </div>
+          <ul>
+            <li>حماية نص كبوت</li>
+            <li>عازل حراري شامل جميع زجاج السيارة</li>
+            <li>حماية الجام الامامي</li>
+            <li>عمل نانو للمقاعد</li>
+            <li>عمل نانو للرنجات</li>
+            <li>تعقيم عدد 2 سيارة</li>
+          </ul>
         </div>
       </div>
     </div>
-    <!-- end specifications -->
-
+    <!-- End Pricing -->
     <!-- start gallery -->
     <section class="gallery" id="gallery">
       <div class="center-text">
@@ -264,22 +220,22 @@
       <div class="carosel">
         <div class=" list">
           <div class="item">
-            <img src="./img/gallery/tint/tint-gal-1.jpg" alt="tint">
+            <img src="./img/gallery/main/ppf-gal-1.png" alt="football">
           </div>
           <div class="item">
-            <img src="./img/gallery/tint/tint-gal-2.jpg" alt=" tint ">
+            <img src="./img/gallery/main/ppf-gal-2.png" alt=" handball ">
           </div>
           <div class="item">
-            <img src="../img/gallery/tint/tint-gal-3.jpg" alt="tint">
+            <img src="../img/gallery/main/ppf-gal-3.png" alt="basketball">
           </div>
           <div class="item">
-            <img src="./img/gallery/tint/tint-gal-4.jpg" alt="tint">
+            <img src="./img/gallery/main/ppf-gal-4.png" alt="volleyball">
           </div>
           <div class="item">
-            <img src="./img/gallery/tint/tint-gal-5.jpg" alt="tint">
+            <img src="./img/gallery/main/ppf-gal-5.png" alt="tennis">
           </div>
           <div class="item">
-            <img src="./img/gallery/tint/tint-gal-6.jpg" alt="tint">
+            <img src="./img/gallery/main/ppf-gal-6.png" alt="swimming">
           </div>
 
         </div>
@@ -445,7 +401,7 @@
     <div class="faq" id="faq">
       <div class="center-text">
         <h2 class="heading-secondary">
-          الاسئلة الأشعة</h2>
+          الاسئلةالشائعة</h2>
       </div>
       <div class="container">
         <section class="working-process my-5">
@@ -460,13 +416,14 @@
                   <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      <span class="accordian-numbers">01</span> ما هي نسبة العازل المسموح بها
+                      <span class="accordian-numbers">01</span> ما هو سمك الحماية
                     </button>
                   </h2>
                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      نسبة العازل المسموحة طبقا لمواصفات وزارة الداخلية 50 </div>
+                      سمك الحماية 9 ميكروميلى
+                    </div>
                   </div>
                 </div>
                 <div class="accordion-item mb-4">
@@ -479,7 +436,7 @@
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      5 سنوات علي عيوب التركيب
+                      10 سنوات علي عيوب التركيب
                     </div>
                   </div>
                 </div>
@@ -493,30 +450,57 @@
                   <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      علي الجام من الداخل لكي تستفيد من حضائص العازل</div>
+                      قص احترافي وقطع كاملة بدون وصلات وتركيب داخلي
+                    </div>
                   </div>
                 </div>
                 <div class="accordion-item mb-4">
                   <h2 class="accordion-header" id="headingFour">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                      <span class="accordian-numbers">04</span> الالوان المتوفرة
+                      <span class="accordian-numbers">04</span> المعالجة الذاتية
                     </button>
                   </h2>
                   <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      شفاف <br>10% <br>30% <br> 50%
+                      تحتوي الحماية علي خاصية المعالجة الذاتية عن طريق تعريضها الي الحرارة
                     </div>
                   </div>
                 </div>
-
+                <div class="accordion-item mb-4">
+                  <h2 class="accordion-header" id="headingFive">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                      <span class="accordian-numbers">05</span> نسبة اللمعة الاضافية
+                    </button>
+                  </h2>
+                  <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      تصل اللمعة الاضافيةالي 70٪
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item mb-4">
+                  <h2 class="accordion-header" id="headingSix">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                      <span class="accordian-numbers">06</span> هل يوجد سيرفس دوري
+                    </button>
+                  </h2>
+                  <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      نعم يوجد سيرفس دوري لفحص الحماية كل 6 اشهور مجانا
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
+        </section>
       </div>
-      </section>
-
     </div>
     <!-- end faq -->
     <section class="section-cta" id="cta">
