--- a/protication.html
+++ b/protication.html
@@ -141,43 +141,48 @@
       <!-- End Features -->
     </section>
     <!-- start ppf-type section -->
-    <section class="section-services" id="services">
+    <section class="ppf-type" id="ppf-type">
       <div class="center-text">
         <h2 class="heading-secondary">
           تعرف علي انواع الحمايات المتوفرة لدينا </h2>
       </div>
       <div class="container">
-        <div class="services-box">
-          <img src="./img/protication/haverkamp.png" alt="protication">
-          <div class="services-info">
-            <a href="./protication.html" target="_blank">
-              <h3> هافركامب</h3>
-            </a>
+        <div class="box">
+          <img src="./img/protication/haverkamp.png" alt="haverkamp" />
+          <div class="content">
+            <h3>هافركامب</h3>
+            <p>حماية المانية</p>
           </div>
-
-        </div>
-        <div class="services-box">
-          <img src="./img/protication/clif-logo.jpg" alt="handball">
-          <div class="services-info">
-            <h3> كلايف ديزاين</h3>
+          <div class="info">
+            <a href="./haverkamp.html">اعرف المزيد</a>
+            <i class="fas fa-long-arrow-alt-left"></i>
           </div>
         </div>
-        <div class="services-box">
-          <img src="./img/protication/hexis.png" alt="handball">
-          <div class="services-info">
-            <h3> هكسيس</h3>
+        <div class="box">
+          <img src="./img/protication/clif-logo.jpg" alt="clif" />
+          <div class="content">
+            <h3>كلايف ديزاين</h3>
+            <p>حماية كورية</p>
+          </div>
+          <div class="info">
+            <a href="./clif.html">اعرف المزيد</a>
+            <i class="fas fa-long-arrow-alt-left"></i>
           </div>
         </div>
-        <div class="services-box">
-          <img src="./img/protication/iron.png" alt="handball">
-          <div class="services-info">
-            <h3>ايرون شيلد </h3>
+        <div class="box">
+          <img src="./img/protication/iron.png" alt="iron shield" />
+          <div class="content">
+            <h3> ايرون شيلد</h3>
+            <p>حماية امريكية</p>
+          </div>
+          <div class="info">
+            <a href="./iron.html">اعرف المزيد</a>
+            <i class="fas fa-long-arrow-alt-left"></i>
           </div>
         </div>
       </div>
     </section>
     <!-- end ppf-type section -->
-
     <!-- start gallery -->
     <section class="gallery" id="gallery">
       <div class="center-text">
