--- a/index.html
+++ b/index.html
@@ -5,22 +5,66 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- seo -->
-  <title>haverkamp | هافركامب</title>
+  <title>هافركامب | افضل حماية سيارات بالكويت </title>
   <meta name=”robots” content="index, follow">
-  <meta name="description" content="افضل واقوي حماية وعازل حراري بالكويت ، منتج الماني 
- ">
+  <meta name="description"
+    content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
   <meta name="author" content="Ahmad M-Nofal">
+  <meta name="google-site-verification" content="v1zCZEudrFcnkNAoZQkylYj93y68FhZteCOy4YvUnbY" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16636917037"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-16636917037');
+  </script>
   <!-- Open Graph -->
-  <meta property="og:title" content="haverkamp | هافركامب" />
-  <meta property="og:description"
-    content="الوكيل الحصري لحماية هافركامب الالمانية في الشرق الاوسط وحماية كلايف ديزاين الكورية في الخليج" />
-  <meta property="og:image" content="https://example.com/image.jpg" />
-  <meta property="og:url" content="https://haverkampkw.com" />
   <meta property="og:type" content="website" />
+  <meta property="og:locale" content="ar_AR">
+  <meta property="og:title"
+    content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
+  <meta property="og:description"
+    content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
+  <meta property="og:image" content="https://haverkampkw.com/img/contact/cover.jpeg" />
+  <meta property="og:url" content="https://haverkampkw.com" />
+  <meta property="og:site_name" content="هافركامب">
+  <meta name="theme-color" content="#00345c">
+  <link rel="canonical" href="https://www.haverkampkw.com/">
+  <!-- Schema.org JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "هافركامب|HaverKamp",
+    "image": "https://haverkampkw.com/img/contact/cover.jpeg",
+    "@id": "https://haverkampkw.com",
+    "url": "https://haverkampkw.com",
+    "telephone": "+965 51111154",
+    "priceRange": "400$",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": " الري ",
+      "addressLocality": "الكويت",
+      "addressCountry": "KW"
+    },
+    "openingHoursSpecification": [{
+  "@type": "OpeningHoursSpecification",
+  "dayOfWeek": ["Saturday","Sunday","Monday","Tuesday","Wednesday","Thursday"],
+  "opens": "10:00",
+  "closes": "20:00"
+}],
+    "sameAs": [
+      "https://www.instagram.com/haverkampkw"
+    ],
+    "description": "شركة هافركامب لحماية السيارات تقدم حلولاً متقدمة في حماية الطلاء والعزل الحراري باستخدام تقنية النانو سيراميك الألمانية بجودة وضمان يصل إلى 10 سنوات."
+  }
+  </script>
+
 
 
   <!-- favicon -->
-
   <link rel="shortcut icon" href="./img/favicon_io/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="192x192" href="./img/favicon_io/android-chrome-192x192.png">
@@ -73,11 +117,11 @@
       <div class="hero">
         <div class="hero-text-box">
           <h1 class="heading-primary">
-            هافركامب
+            هافركامب افضل حماية سيارات بالكويت
           </h1>
           <p class="hero-description">
             الوكيل الحصري لحماية هافركامب الالمانية في الشرق الاوسط
-            الوكيل الحصري لحماية كلايف ديزاين الكورية
+            الوكيل الحصري لحماية كلايف ديزاين الكورية بالكويت
             <br>
             <br>
             مليت من الشركات اللي تجص عليك وتركب ليك حماية سيئة وتقول لك انها
@@ -196,6 +240,9 @@
           <li><i class="fa-solid fa-medal"></i> فنيون مدربون علي اعلي مستوي</li>
           <li>
             <i class="fa-solid fa-chart-line"></i>خبرة اكثر من 14 عام
+          </li>
+          <li>
+            <i class="fa-solid fa-award"></i></i>خدمة ما بعد التركيب
           </li>
           <li> <i class="fa-solid fa-circle-info"></i> نهتم بادق التفاصيل</li>
 
