--- a/protication.html
+++ b/protication.html
@@ -5,22 +5,77 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- seo -->
-  <title>haverkamp | هافركامب</title>
+  <title>هافركامب | افضل حماية سيارات بالكويت </title>
   <meta name=”robots” content="index, follow">
-  <meta name="description" content="افضل واقوي حماية وعازل حراري بالكويت ، منتج الماني 
- ">
+  <meta name="description"
+    content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
   <meta name="author" content="Ahmad M-Nofal">
+  <meta name="google-site-verification" content="v1zCZEudrFcnkNAoZQkylYj93y68FhZteCOy4YvUnbY" />
   <!-- Open Graph -->
-  <meta property="og:title" content="haverkamp | هافركامب" />
-  <meta property="og:description"
-    content="الوكيل الحصري لحمايات هافركامب الالمانية في الشرق الاوسط وحمايات كلايف ديزاين الكورية في الخليج" />
-  <meta property="og:image" content="https://example.com/image.jpg" />
-  <meta property="og:url" content="https://haverkampkw.com" />
   <meta property="og:type" content="website" />
+  <meta property="og:locale" content="ar_AR">
+  <meta property="og:title"
+    content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
+  <meta property="og:description"
+    content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
+  <meta property="og:image" content="https://haverkampkw.com/img/contact/cover.jpeg" />
+  <meta property="og:url" content="https://haverkampkw.com" />
+  <meta property="og:site_name" content="هافركامب">
+  <meta name="theme-color" content="#00345c">
+  <link rel="canonical" href="https://www.haverkampkw.com/">
+  <!-- Schema.org JSON-LD -->
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "حماية هافركامب",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "هافركامب لحماية السيارات",
+    "image": "https://haverkampkw.com/img/contact/cover.jpeg",
+    "url": "https://www.haverkampkw.com",
+    "telephone": "+965 51111154",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": " الري، الكويت",
+      "addressLocality": "الكويت",
+      "addressCountry": "KW"
+    },
+    "openingHoursSpecification": [{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": ["Saturday","Sunday","Monday","Tuesday","Wednesday","Thursday"],
+      "opens": "10:00",
+      "closes": "20:00"
+    }],
+    "sameAs": [
+      "https://www.instagram.com/haverkamp",
+      "https://www.facebook.com/haverkamp",
+      "https://maps.app.goo.gl/rnF3t2HM2ig7cM7f9"
+    ]
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "الكويت"
+  },
+  "description": "حماية فل بدي المانية - عازل حراري - حماية جام - نانو للمقاعد- نانو للرتقات - تلبيس للدواسات",
+  "offers": {
+    "@type": "Offer",
+    "priceCurrency": "KWD",
+    "price": "400.000",
+    "availability": "https://schema.org/InStock",
+    "url": "https://haverkampkw.com/haverkamp.html"
+  },
+  "brand": {
+    "@type": "Brand",
+    "name": "Haverkamp",
+    "logo": "https://haverkampkw.com/img/main_page/haverkamp.webp"
+  }
+}
+</script>
+
 
 
   <!-- favicon -->
-
   <link rel="shortcut icon" href="./img/favicon_io/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="192x192" href="./img/favicon_io/android-chrome-192x192.png">
@@ -35,9 +90,7 @@
   <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css">
   <!-- css style -->
   <link rel="stylesheet" href="css/style.css" />
-  <!-- slider-boot -->
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
   <!-- font-awesome  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
   <!-- js -->
